# ChangeLog for net-analyzer/zabbix-frontend
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix-frontend/ChangeLog,v 1.5 2006/06/19 23:41:17 wschlich Exp $

  19 Jun 2006; Wolfram Schlich <wschlich@gentoo.org>
  files/postinstall-en-1.1.txt:
  fix postinstall textfile

  06 Jun 2006; Wolfram Schlich <wschlich@gentoo.org> metadata.xml:
  update metadata.xml

*zabbix-frontend-1.1 (06 Jun 2006)

  06 Jun 2006; Wolfram Schlich <wschlich@gentoo.org>
  +files/postinstall-en-1.1.txt, +zabbix-frontend-1.1.ebuild:
  maintainer takeover, version bump

  19 Jul 2005; David Holm <dholm@gentoo.org>
  zabbix-frontend-1.1_alpha7.ebuild:
  Added to ~ppc.

*zabbix-frontend-1.1_alpha7 (26 Apr 2005)

  26 Apr 2005; Brian Jackson <iggy@gentoo.org> +metadata.xml,
  +zabbix-frontend-1.1_alpha7.ebuild:
  Initial commit to Gentoo's cvs, huge thanks to Norguhtar
  <sauronATinfocentr.ru> (bug #90005), and all the people on bug #58123
