@@ -1,0 +1,3 @@
+MD5 baa6896c5f41ed286bca3c40e419e1cf zabbix-1.1.6.tar.gz 1541835
+RMD160 93694315a710811631591554807d571de25922c6 zabbix-1.1.6.tar.gz 1541835
+SHA256 348b395df68a808c25cb96287bbb0460e531e46049b6be1bd5be236365022281 zabbix-1.1.6.tar.gz 1541835
