@@ -1,1 +1,3 @@
 MD5 a900c9838075690a8d04849cda42c67c zabbix-1.1alpha7.tar.gz 654347
+RMD160 2d888d1b22c44d8acd0feb41b51fc14f1c5da357 zabbix-1.1alpha7.tar.gz 654347
+SHA256 31509e7106c2ff6f197a298b5c8256e24d9b0c9dd9d1d7fe1d81c49393ea471d zabbix-1.1alpha7.tar.gz 654347
