@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/zabbix-frontend
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix-frontend/ChangeLog,v 1.5 2006/06/19 23:41:17 wschlich Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix-frontend/ChangeLog,v 1.6 2007/02/12 01:01:01 wschlich Exp $
+
+*zabbix-frontend-1.1.6 (12 Feb 2007)
+
+  12 Feb 2007; Wolfram Schlich <wschlich@gentoo.org>
+  +files/postinstall-en-1.1.6.txt, +zabbix-frontend-1.1.6.ebuild:
+  version bump
 
   19 Jun 2006; Wolfram Schlich <wschlich@gentoo.org>
   files/postinstall-en-1.1.txt:
